# Open_Meteo_API_Test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py
app/schemas/: schemas.py
app/services/: open_meteo_client.py  scoring_service.py  weather_service.py
