[project]
name = "open-meteo-api-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openmeteo-requests>=1.7.5",
    "pydantic>=2.13.4",
    "requests-cache",
    "requests>=2.33.1",
    "retry>=0.9.2",
    "retry-requests>=2.0.0",
    "numpy>=2.4.4",
]
